--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:3000",
   "homepage": "https://nivedhanatarajan7.github.io/flt-barcode-reader/",
   "scripts": {
     "start": "react-scripts start",
